sh/y.output

state 0
	$accept: .top $end 

	WORD  shift 6
	'\n'  shift 2
	.  error

	args  goto 5
	cmd  goto 4
	line  goto 3
	top  goto 1

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  '\n'.    (1)

	.  reduce 1 (src line 22)


state 3
	top:  line.    (2)

	.  reduce 2 (src line 23)


state 4
	line:  cmd.'\n' 
	line:  cmd.';' '\n' 
	line:  cmd.';' line 
	cmd:  cmd.'>' WORD 
	cmd:  cmd.'<' WORD 

	'\n'  shift 7
	';'  shift 8
	'>'  shift 9
	'<'  shift 10
	.  error


state 5
	cmd:  args.    (6)
	args:  args.WORD 

	WORD  shift 11
	.  reduce 6 (src line 29)


state 6
	args:  WORD.    (9)

	.  reduce 9 (src line 33)


state 7
	line:  cmd '\n'.    (3)

	.  reduce 3 (src line 25)


state 8
	line:  cmd ';'.'\n' 
	line:  cmd ';'.line 

	WORD  shift 6
	'\n'  shift 12
	.  error

	args  goto 5
	cmd  goto 4
	line  goto 13

state 9
	cmd:  cmd '>'.WORD 

	WORD  shift 14
	.  error


state 10
	cmd:  cmd '<'.WORD 

	WORD  shift 15
	.  error


state 11
	args:  args WORD.    (10)

	.  reduce 10 (src line 34)


state 12
	line:  cmd ';' '\n'.    (4)

	.  reduce 4 (src line 26)


state 13
	line:  cmd ';' line.    (5)

	.  reduce 5 (src line 27)


state 14
	cmd:  cmd '>' WORD.    (7)

	.  reduce 7 (src line 30)


state 15
	cmd:  cmd '<' WORD.    (8)

	.  reduce 8 (src line 31)


8 terminals, 5 nonterminals
11 grammar rules, 16/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
54 working sets used
memory: parser 6/30000
0 extra closures
11 shift entries, 1 exceptions
5 goto entries
2 entries saved by goto default
Optimizer space used: output 16/30000
16 table entries, 0 zero
maximum spread: 8, maximum offset: 8
